fixed horizontal scrolling

--- a/lesson_95/css/global.css
+++ b/lesson_95/css/global.css
@@ -19,6 +19,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 p,
